syntax = "proto3";

package jas.agent.conf.v1;

option go_package = "jas-agent/internal/conf;conf";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  LLM llm = 3;
  RCA rca = 4;
}

message Server {
  HTTP http = 1;
  GRPC grpc = 2;

  message HTTP {
    string addr = 1;
  }

  message GRPC {
    string addr = 1;
  }
}

message Data {
  Database database = 1;
  Knowledge knowledge=2;
  Neo4j neo4j=3;
  Milvus milvus=4;
  message Database {
    string driver = 1;
    string source = 2;
    int32 max_idle_conns = 3;
    int32 max_open_conns = 4;
    int32 conn_max_lifetime = 5;
  }
  message Neo4j {
    string target = 1;
    string username = 2;
    string password=3;
    string database=4;
  }
  message Milvus {
    string host = 1;
    string username = 2;
    string password=3;
    int32 port=4;
  }
}

message LLM {
  string api_key = 1;
  string base_url = 2;
  string model = 3;
}

message Knowledge{
  string upload_dir=1;
  string api_key=2;
}

message RCA {
  Server server = 1;
  Clients clients = 2;
  Weaviate weaviate = 3;
  Anomaly anomaly = 4;

  message Server {
    string address = 1;           // gRPC 服务地址，默认 :50051
    string metrics_address = 2;   // 指标服务地址，默认 :2112
    string graceful_timeout = 3;  // 优雅关闭超时，默认 10s
  }

  message Clients {
    Core core = 1;
    
    message Core {
      string base_url = 1;        // mirador-core 基础 URL
      string api_key = 2;         // API 密钥
      string timeout = 3;         // 请求超时，默认 5s
    }
  }

  message Weaviate {
    string endpoint = 1;          // Weaviate 端点
    string api_key = 2;           // API 密钥
    string timeout = 3;           // 请求超时，默认 5s
  }

  message Anomaly {
    double default_threshold = 1;  // 默认异常阈值，默认 2.5
    double metric_threshold = 2;   // 指标异常阈值，默认 2.5
    double log_threshold = 3;      // 日志异常阈值，默认 3.0
    double trace_threshold = 4;    // 追踪异常阈值，默认 2.0
  }
}
